# Project_Templates

./: README.md
Python/: LICENSE  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
Python/.github/workflows/: ci.yml
Python/ci/: code_check.sh  run_tests.sh
Rust/: Cargo.toml  README.rst
Rust/.github/workflows/: ci.yml
Rust/src/: main.rs
