[bdist_wheel]
universal = 1

[flake8]
ignore = 
    E203 # space before : (needed for how black formats slicing)
max-line-length = 88

[isort]
combine_as_imports = True
force_sort_within_sections = True
line_length = 88
profile = black
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst
name = snadra
project_urls =
    Source = https://github.com/ShaharNaveh/{name}
    Tracker = https://github.com/ShaharNaveh/{name}/issues
version = attr: snadra.__version__

[mypy]
check_untyped_defs = True
disallow_any_decorated = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unused_ignores = True

[options]
include_package_data = True
install_requires =
    prompt_toolkit
packages = find:
package_dir =
    = src
python_requires = >=3.7, !=3.9.*

[options.packages.find]
where = src

[tool:pytest]
filterwarnings = error
minversion = 6.1.0
python_files =
    test_*.py
testpaths = tests
xfail_strict = True
